# statical

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
Calendar/: Cargo.toml
assets/: statical.css  statical.sass
benches/: main.rs
public/: statical.css
src/: calendar.rs  config.rs  event.rs  lib.rs  main.rs  options.rs  util.rs
src/configuration/: calendar_source_config.rs  config.rs  mod.rs  options.rs  types.rs
src/configuration/types/: cache_mode.rs  calendar_view.rs  config_color.rs  config_date.rs  config_time_zone.rs  config_url.rs  mod.rs
src/model/: agenda.rs  calendar.rs  calendar_collection.rs  calendar_source.rs  day.rs  event.rs  mod.rs  month.rs  week.rs
src/view/: mod.rs  week.rs
src/views/: agenda_view.rs  day_view.rs  event_view.rs  feed_view.rs  mod.rs  month_view.rs  week_view.rs
templates/: agenda.html  day.html  event.html  event_include.html  month.html  page.html  pagination.html  pagination_with_views.html  views.html  week.html
tests/: example.rs
