[package]
name = "statical"
version = "0.1.0"
authors = ["Elio Grieco <grieco@egx.com>"]
edition = "2021"
description = "A calendar aggregator and generator to make maintaining calendars on static websites easier."
readme = "README.md"
repository = "https://github.com/egrieco/statical"
license = "BSD-3-Clause"                                                                                     # https://spdx.org/licenses/
keywords = ["static", "web", "calendar", "ics", "ical"]                                                      # free text
categories = ["command-line-utilities"]                                                                      # https://crates.io/category_slugs
exclude = [".vscode/*", ".gitignore"]
# https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "main"
harness = false

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
chrono-humanize = "0.2.2"
chrono-tz = "0.8.2"
chronoutil = "0.2.4"
clap = { version = "4.3.4", features = ["derive"] }
color-eyre = "0.6.2"
dedup_iter = "0.1.1"
flexi_logger = "0.25.5"
ical = "0.8.0"
indent = "0.1.1"
itertools = "0.10.5"
log = "0.4.19"
num-traits = "0.2.15"
regex = "1.8.4"
rrule = "0.10.0"
serde = { version = "1.0.164", features = ["derive", "rc"] }
#serde_json = "1.0.83"
tera = { version = "1.19.0", features = ["date-locale"] }
toml_edit = { version = "0.19.10", features = ["serde"] }
unescaper = "0.1.1"
ureq = "2.7.0"
url = "2.4.0"
# serde = { version = "1", features = ["derive"] }
# config = { version = "0", features = ["hjson"] }  # also supports ini, yaml
# termcolor = "1"
# dialoguer = "0"
# fuzzy-matcher = "0"  # fuzzy string-matching
# tabwriter = "1"  # tab-aligned printing
# regex = "1"
# cmd_lib = "0"
# float-cmp = "0"
# maplit = "1"
# auto_enums = "0"  # return multiple types from the same fn
# derive_builder = "0"
# wyz = "0"  # myrrlyn's utils
# derivative = "2"
# derive_more = "0"
# fasteval = "0"  # calculator language

[dev-dependencies]
pretty_assertions = "1.3.0"
indoc = "2.0.1"
criterion = "0.5.1"
