[package]
name = "statical"
version = "0.1.0"
authors = ["Elio Grieco <grieco@egx.com>"]
edition = "2021"
description = "A calendar aggregator and generator to make maintaining calendars on static websites easier."
readme = "README.md"
repository = "https://github.com/egrieco/statical"
license = "BSD-3-Clause"                                                                                     # https://spdx.org/licenses/
keywords = ["static", "web", "calendar", "ics", "ical"]                                                      # free text
categories = ["command-line-utilities"]                                                                      # https://crates.io/category_slugs
exclude = [".vscode/*", ".gitignore"]
# https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "main"
harness = false

[dependencies]
chrono = { version = "0.4.28", features = ["serde"] }
chrono-humanize = "0.2.3"
chrono-tz = { version = "0.8.3", features = ["serde"] }
chronoutil = "0.2.5"
clap = { version = "4.4.2", features = ["derive"] }
color-eyre = "0.6.2"
csscolorparser = { version = "0.6.2", features = ["serde"] }
dedup_iter = "0.1.1"
doku = { version = "0.21.1", features = ["chrono", "chrono-04"] }
figment = { version = "0.10.10", features = ["toml"] }
flexi_logger = "0.26.0"
fuzzydate = "0.2.1"
grass = "0.13.1"
ical = "0.8.0"
icalendar = "0.15.7"
include_dir = { version = "0.7.3", features = ["glob"] }
indent = "0.1.1"
itertools = "0.11.0"
log = "0.4.20"
num-traits = "0.2.16"
regex = "1.9.5"
rrule = "0.11.0"
serde = { version = "1.0.188", features = ["derive", "rc"] }
#serde_json = "1.0.83"
tera = { version = "1.19.0", features = ["date-locale"] }
toml_edit = { version = "0.19.14", features = ["serde"] }
unescaper = "0.1.2"
unix_path = { version = "1.0.1", features = ["serde"] }
ureq = "2.7.1"
url = "2.4.1"
# serde = { version = "1", features = ["derive"] }
# config = { version = "0", features = ["hjson"] }  # also supports ini, yaml
# termcolor = "1"
# dialoguer = "0"
# fuzzy-matcher = "0"  # fuzzy string-matching
# tabwriter = "1"  # tab-aligned printing
# regex = "1"
# cmd_lib = "0"
# float-cmp = "0"
# maplit = "1"
# auto_enums = "0"  # return multiple types from the same fn
# derive_builder = "0"
# wyz = "0"  # myrrlyn's utils
# derivative = "2"
# derive_more = "0"
# fasteval = "0"  # calculator language

[dev-dependencies]
pretty_assertions = "1.4.0"
indoc = "2.0.3"
criterion = "0.5.1"
